--- a/Templates/MVVM-C/UIScene.xctemplate/TemplateInfo.plist
+++ b/Templates/MVVM-C/UIScene.xctemplate/TemplateInfo.plist
@@ -36,7 +36,7 @@
 			<key>Default</key>
 			<string>___VARIABLE_sceneName:identifier___ViewModel</string>
 			<key>Description</key>
-			<string>The view model name</string>
+			<string>The View Model name</string>
 			<key>Identifier</key>
 			<string>viewModelName</string>
 			<key>Name</key>
@@ -48,7 +48,7 @@
 		</dict>
 		<dict>
 			<key>Default</key>
-			<string>___VARIABLE_sceneName:identifier___UseCase</string>
+			<string>___VARIABLE_sceneName:identifier___UseCase1</string>
 			<key>Description</key>
 			<string>The use case name</string>
 			<key>Identifier</key>
@@ -167,6 +167,118 @@
 			<string>viewControllerProtocolName</string>
 			<key>Name</key>
 			<string>View Controller Protocol Name:</string>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>Mock___VARIABLE_sceneName:identifier___ViewController</string>
+			<key>Description</key>
+			<string>The mock view controller name</string>
+			<key>Identifier</key>
+			<string>mockViewControllerName</string>
+			<key>Name</key>
+			<string>Mock View Controller Name:</string>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>Mock___VARIABLE_sceneName:identifier___Coordinator</string>
+			<key>Description</key>
+			<string>The Mock Coordinator name</string>
+			<key>Identifier</key>
+			<string>mockCoordinatorName</string>
+			<key>Name</key>
+			<string>Mock Coordinator Name:</string>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>Mock___VARIABLE_sceneName:identifier___Service</string>
+			<key>Description</key>
+			<string>The Mock Service name</string>
+			<key>Identifier</key>
+			<string>mockServiceName</string>
+			<key>Name</key>
+			<string>Mock Service Name:</string>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>Mock___VARIABLE_sceneName:identifier___Collaborator</string>
+			<key>Description</key>
+			<string>The Mock Collaborator name</string>
+			<key>Identifier</key>
+			<string>mockCollaboratorName</string>
+			<key>Name</key>
+			<string>Mock Collaborator Name:</string>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>Mock___VARIABLE_sceneName:identifier___UseCase1</string>
+			<key>Description</key>
+			<string>The mock use case name</string>
+			<key>Identifier</key>
+			<string>mockUseCaseName</string>
+			<key>Name</key>
+			<string>Mock Use case Name:</string>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>___VARIABLE_sceneName:identifier___CollaboratorTests</string>
+			<key>Description</key>
+			<string>The Collaborator Tests name</string>
+			<key>Identifier</key>
+			<string>collaboratorTestsName</string>
+			<key>Name</key>
+			<string>Collaborator Tests Name:</string>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>___VARIABLE_sceneName:identifier___UseCase1Tests</string>
+			<key>Description</key>
+			<string>The Use Case 1 Tests name</string>
+			<key>Identifier</key>
+			<string>useCase1TestsName</string>
+			<key>Name</key>
+			<string>Use case 1 Tests Name:</string>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>___VARIABLE_sceneName:identifier___ViewModelTests</string>
+			<key>Description</key>
+			<string>The View Model Tests name</string>
+			<key>Identifier</key>
+			<string>viewModelTestsName</string>
+			<key>Name</key>
+			<string>View Model Tests Name:</string>
 			<key>Required</key>
 			<true/>
 			<key>Type</key>
