--- a/Templates/MVVM-C/UISceneTests.xctemplate/TemplateInfo.plist
+++ b/Templates/MVVM-C/UISceneTests.xctemplate/TemplateInfo.plist
@@ -11,6 +11,28 @@
 	<key>Options</key>
 	<array>
 		<dict>
+			<key>Description</key>
+			<string>The name of the scene to create the tests</string>
+			<key>Identifier</key>
+			<string>sceneName</string>
+			<key>Name</key>
+			<string>Scene Name for Tests:</string>
+			<key>NotPersisted</key>
+			<true/>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>text</string>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>___VARIABLE_sceneName:identifier___</string>
+			<key>Identifier</key>
+			<string>productName</string>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+		<dict>
 			<key>Default</key>
 			<string>Mock___VARIABLE_sceneName:identifier___ViewController</string>
 			<key>Description</key>
@@ -130,6 +152,6 @@
 	<key>SortOrder</key>
 	<string>9</string>
 	<key>Summary</key>
-	<string>This generates a new scene using jlr-ios architecture.</string>
+	<string>This generates a new scene using MVVM-C architecture.</string>
 </dict>
 </plist>
