--- a/Templates/MVVM-C/NoUIScene.xctemplate/TemplateInfo.plist
+++ b/Templates/MVVM-C/NoUIScene.xctemplate/TemplateInfo.plist
@@ -110,6 +110,6 @@
 	<key>SortOrder</key>
 	<string>9</string>
 	<key>Summary</key>
-	<string>This generates a new scene using jlr-ios architecture.</string>
+	<string>This generates a new scene using MVVM-c architecture.</string>
 </dict>
 </plist>
