--- a/BaseModule/BaseModule.xcodeproj/xcshareddata/xcschemes/BaseModule.xcscheme
+++ b/BaseModule/BaseModule.xcodeproj/xcshareddata/xcschemes/BaseModule.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0D0075202769F8A900D9D531"
-               BuildableName = "ReferenceArch.app"
-               BlueprintName = "ReferenceArch"
-               ReferencedContainer = "container:ReferenceArch.xcodeproj">
+               BlueprintIdentifier = "0D04440B2775F21200684F7A"
+               BuildableName = "BaseModule.framework"
+               BlueprintName = "BaseModule"
+               ReferencedContainer = "container:BaseModule.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,20 +33,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0D0075362769F8B500D9D531"
-               BuildableName = "ReferenceArchTests.xctest"
-               BlueprintName = "ReferenceArchTests"
-               ReferencedContainer = "container:ReferenceArch.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0D0075402769F8B500D9D531"
-               BuildableName = "ReferenceArchUITests.xctest"
-               BlueprintName = "ReferenceArchUITests"
-               ReferencedContainer = "container:ReferenceArch.xcodeproj">
+               BlueprintIdentifier = "0D0444152775F21300684F7A"
+               BuildableName = "BaseModuleTests.xctest"
+               BlueprintName = "BaseModuleTests"
+               ReferencedContainer = "container:BaseModule.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -61,16 +51,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0D0075202769F8A900D9D531"
-            BuildableName = "ReferenceArch.app"
-            BlueprintName = "ReferenceArch"
-            ReferencedContainer = "container:ReferenceArch.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -78,16 +58,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0D0075202769F8A900D9D531"
-            BuildableName = "ReferenceArch.app"
-            BlueprintName = "ReferenceArch"
-            ReferencedContainer = "container:ReferenceArch.xcodeproj">
+            BlueprintIdentifier = "0D04440B2775F21200684F7A"
+            BuildableName = "BaseModule.framework"
+            BlueprintName = "BaseModule"
+            ReferencedContainer = "container:BaseModule.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
